# ed

./: .travis.yml  CMakeLists.txt  README.md  package.xml
config/: amigo.yaml  config_amigo.yml
include/ed/: entity.h  measurement.h  plugin_container.h  server.h  types.h  update_request.h
include/ed/helpers/: visualization.h
include/ed/sensor_modules/: kinect.h
perception/: type_aggregator.cpp
plugins/: occupancy_grid_publisher_plugin.cpp  occupancy_grid_publisher_plugin.h  robot_plugin.cpp  tf_publisher_plugin.cpp
src/: ed.cpp  entity.cpp  measurement.cpp  perception.cpp  plugin_container.cpp  server.cpp  world_model.cpp
src/helpers/: visualization.cpp
src/io/filesystem/: read.cpp  write.cpp
src/sensor_modules/: kinect.cpp
test/: test_sampling.cpp
