<?xml version="1.0"?>
<package>
  <name>ed</name>
  <version>0.0.0</version>
  <description>Environment Descriptor (ED)</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>class_loader</build_depend>
  <build_depend>geolib2</build_depend>
  <build_depend>tue_config</build_depend>
  <build_depend>tue_filesystem</build_depend>

  <run_depend>class_loader</run_depend>
  <run_depend>geolib2</run_depend>
  <run_depend>tue_config</run_depend>
  <run_depend>tue_filesystem</run_depend>

</package>
